--- a/CSS/kasper.css
+++ b/CSS/kasper.css
@@ -47,7 +47,7 @@ ul {
 /* large  */
 @media(min-width :1200px) {
     .container {
-        width: 1170;
+        width: 1170px;
     }
 }
 /* Global rules */
